<resources>
    <string name="app_name">FoodApp</string>
    <string name="deliicious_food">Deliicious Food</string>
    <string name="cook_food_like_your_personel_cheft">Cook food like your personel cheft</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="certified_chef">Certified Chef</string>
    <string name="get_started">Get started</string>
    <string name="you_can_access_our_different_dishes_from_the_menus">You can access our different dishes from the menus.</string>
    <string name="_28_kinds">28 kinds</string>
    <string name="pizza">Pizza</string>
    <string name="login">Login</string>
    <string name="login_to_app">Login to app</string>
    <string name="i_dont_have_account_sing_up">
        <font color="#B0B0B0">I dont have account.</font>
        <b><fontư color= "#FFFFFF">Sing up </fontư></b>
    </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="you_can_access_our_different_dishes">You can access our different dishes.</string>
    <string name="sing_up">Sing up</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="nex_app">Nex App</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="cahange_password">Cahange Password</string>
    <string name="re_enter_new_password">Re Enter New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="save">Save</string>
    <string name="sale_off_30">Sale Off 30%</string>
    <string name="_7_90">$7,90</string>
    <string name="mixed_pizza_with_cheese">Mixed Pizza with cheese</string>
    <string name="clasico">Clasico</string>
    <string name="_78_calories">78 Calories</string>
    <string name="price">Price</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="_2_item">2 item</string>
    <string name="special_for_you">Special For You</string>
    <string name="food">Food</string>
    <string name="populer">Populer</string>
    <string name="top">Top</string>
    <string name="all_menu">All Menu</string>
    <string name="your_informations">Your informations</string>
    <string name="yor_delivery_address">Yor Delivery Address</string>
    <string name="campaigns">Campaigns</string>
    <string name="search">Search</string>
    <string name="food_40_resulth">Food 40 Resulth</string>
    <string name="_0395968032">0395968032</string>
    <string name="my_profile">My Profile</string>
    <string name="payment_settings">Payment Settings</string>
    <string name="my_order">My Order</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="filter_food">Filter Food</string>
    <string name="long_out">Long Out</string>
    <string name="luu_van_d_ng">Luu Van Dũng</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="name_surname">Name Surname</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="luvandung_gmail_com">luvandung@gmail.com</string>
    <string name="dung">dung</string>
</resources>