<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32000000">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.134" />

        <View
            android:id="@+id/cs_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_1" />


        <ImageView
            android:id="@+id/im_strocx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_ellipsexam"
            android:src="@drawable/ic_strocx"
            app:layout_constraintBottom_toBottomOf="@id/guideline_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_1" />


        <!--        <ImageView-->
        <!--            android:id="@+id/im_cong"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@drawable/ic_ellipsexam"-->
        <!--            android:src="@drawable/ic_cong"-->
        <!--            android:layout_marginEnd="-40dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/im_strocx"-->
        <!--            app:layout_constraintRight_toRightOf="@id/im_strocx"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/im_strocx" />-->


        <TextView
            android:id="@+id/tv_my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/medium"

            android:text="@string/my_profile"
            android:textColor="#232323"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_strocx" />


        <TextView
            android:id="@+id/tv_profile_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="24dp"
            android:fontFamily="@font/medium"
            android:text="@string/profile_detail"
            android:textColor="#B0B0B0"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_my_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_my_profile" />

        <TextView
            android:id="@+id/tv_name_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:fontFamily="@font/medium"
            android:paddingVertical="10dp"
            android:text="@string/name_surname"
            android:textColor="#B0B0B0"

            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_detail" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:fontFamily="@font/medium"
            android:paddingBottom="15dp"
            android:text="@string/luu_van_d_ng"
            android:textColor="#232323"
            android:textSize="16sp"

            app:layout_constraintLeft_toLeftOf="@id/tv_name_surname"
            app:layout_constraintRight_toRightOf="@id/tv_name_surname"
            app:layout_constraintTop_toBottomOf="@id/tv_name_surname" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/medium"
            android:paddingVertical="10dp"
            android:text="@string/phone"
            android:textColor="#B0B0B0"
            android:textSize="16sp"

            app:layout_constraintLeft_toLeftOf="@id/tv_name_surname"
            app:layout_constraintRight_toRightOf="@id/tv_name_surname"
            app:layout_constraintTop_toBottomOf="@id/ed_name" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:fontFamily="@font/medium"
            android:paddingBottom="15dp"
            android:text="@string/_0395968032"
            android:textColor="#232323"
            android:textSize="16sp"

            app:layout_constraintLeft_toLeftOf="@id/tv_phone"
            app:layout_constraintRight_toRightOf="@id/tv_phone"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/medium"
            android:paddingVertical="10dp"

            android:text="@string/email"
            android:textColor="#B0B0B0"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/ed_phone"
            app:layout_constraintRight_toRightOf="@id/ed_phone"
            app:layout_constraintTop_toBottomOf="@id/ed_phone" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:fontFamily="@font/medium"
            android:paddingBottom="15dp"

            android:text="@string/luvandung_gmail_com"
            android:textColor="#232323"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_email"
            app:layout_constraintRight_toRightOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:fontFamily="@font/medium"
            android:paddingVertical="10dp"
            android:text="@string/address"
            android:textColor="#B0B0B0"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/ed_email"
            app:layout_constraintRight_toRightOf="@id/ed_email"
            app:layout_constraintTop_toBottomOf="@id/ed_email" />

        <EditText
            android:id="@+id/ed_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:background="@null"
            android:fontFamily="@font/medium"
            android:paddingBottom="15dp"
            android:text="Nhà mặt phố "
            android:textColor="#232323"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_address"
            app:layout_constraintRight_toRightOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />

        <TextView
            android:id="@+id/tv_login_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_get"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/custom_ripple_rectangle"
            android:gravity="center"
            android:minLines="2"
            android:padding="13dp"
            android:text="@string/long_out"
            android:textColor="#FFFFFF"
            app:layout_constraintLeft_toLeftOf="@id/ed_address"
            app:layout_constraintRight_toRightOf="@id/ed_address"
            app:layout_constraintTop_toBottomOf="@id/ed_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>