<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32000000">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.134" />

        <View
            android:id="@+id/cs_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="@id/guideline_1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/custom_login" />


        <ImageView
            android:id="@+id/im_strocx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_ellipsexam"
            android:src="@drawable/ic_strocx"
            app:layout_constraintBottom_toBottomOf="@id/guideline_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_1" />

        <ImageView
            android:id="@+id/im_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_khien"
            app:layout_constraintBottom_toBottomOf="@id/im_strocx"
            app:layout_constraintLeft_toLeftOf="@id/im_strocx"
            app:layout_constraintRight_toRightOf="@id/im_strocx"
            app:layout_constraintTop_toTopOf="@+id/im_strocx"
           />


        <TextView
            android:id="@+id/tv_cahange_pasword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/cahange_password"
            android:textColor="#232323"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_strocx" />

        <ImageView
            android:id="@+id/im_v_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_v"
            android:layout_marginRight="5dp"
            app:layout_constraintBottom_toBottomOf="@id/ed_pass_word"
            app:layout_constraintRight_toRightOf="@id/ed_pass_word"
            app:layout_constraintTop_toTopOf="@+id/ed_pass_word"
            />
        <ImageView
            android:id="@+id/im_x_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_x"
            android:visibility="invisible"
            android:layout_marginRight="5dp"
            app:layout_constraintBottom_toBottomOf="@id/ed_pass_word"
            app:layout_constraintRight_toRightOf="@id/ed_pass_word"
            app:layout_constraintTop_toTopOf="@+id/ed_pass_word"
            />


        <EditText
            android:id="@+id/ed_pass_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="28dp"
            android:autofillHints="User name"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="#B0B0B0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_pass" />


        <EditText
            android:id="@+id/ed_re_enter_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:hint="@string/re_enter_new_password"
            android:padding="20dp"
            android:textColor="#B0B0B0"
            app:layout_constraintLeft_toLeftOf="@id/ed_pass_word"
            app:layout_constraintRight_toRightOf="@id/ed_pass_word"
            app:layout_constraintTop_toBottomOf="@id/ed_enter_new_password"
            android:autofillHints="Pass word"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/ed_enter_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:padding="20dp"
            android:textColor="#B0B0B0"
            android:hint="@string/enter_new_password"
            app:layout_constraintLeft_toLeftOf="@id/ed_pass_word"
            app:layout_constraintRight_toRightOf="@id/ed_pass_word"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:autofillHints="Pass word"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_login_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_get"
            android:gravity="center"
            android:minLines="2"
            android:padding="15dp"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            app:layout_constraintLeft_toLeftOf="@id/ed_re_enter_new_password"
            app:layout_constraintRight_toRightOf="@id/ed_re_enter_new_password"
            app:layout_constraintTop_toBottomOf="@id/ed_re_enter_new_password" />

        <TextView
            android:id="@+id/tv_title_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#B0B0B0"
            android:text="@string/enter_old_password"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_cahange_pasword"
            app:layout_constraintTop_toBottomOf="@id/tv_cahange_pasword" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_new_password"
            android:textColor="#B0B0B0"
            android:layout_marginBottom="24dp"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_cahange_pasword"
            app:layout_constraintTop_toBottomOf="@id/ed_pass_word" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>