<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/custom_ripple_rectangle"
        android:background="#F9FAFC">

        <TextView
            android:id="@+id/tv_calo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_kcal"
            android:drawablePadding="5dp"
            android:text="@string/_78_calories"
            android:fontFamily="@font/medium"
            android:textColor="#232323"
            android:textSize="12sp"
            android:layout_marginTop="23dp"
            app:layout_constraintLeft_toLeftOf="@id/cv_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cv_avatar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="0dp"
            android:src="@drawable/image"
            app:layout_constraintDimensionRatio="1.2:1"
            app:layout_constraintTop_toBottomOf="@id/tv_calo" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/clasico"
            android:fontFamily="@font/medium"
            android:textColor="#232323"            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/cv_avatar"
            app:layout_constraintTop_toBottomOf="@id/cv_avatar" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right|center"
            android:minLines="2"
            android:text="@string/mixed_pizza_with_cheese"
            android:textColor="#AFAFAF"
            android:fontFamily="@font/medium"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_gia_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/_7_90"
            android:fontFamily="@font/medium"
            android:textColor="#232323"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <ImageView
            android:id="@+id/im_next"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/custom_ripple_rectangle"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_next1"
            app:layout_constraintRight_toRightOf="@id/cv_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_gia_new" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>